--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,21 +56,30 @@
   /* (12/12)*100 */
   width: 100%; }
 
-@media handheld and (max-width: 50em), screen and (max-width: 30em) {
-  .col-2 {
+@media (max-width: 500px) {
+  #etiquetas {
     width: 100%; }
 
   .col-5 {
     width: 100%; } }
+@media (max-width: 800px) {
+  .col-2 {
+    width: 33.333%; }
+
+  #deberes {
+    width: 100%; }
+
+  #descripcion {
+    width: 66.66%; } }
 .title {
   color: white;
   padding: 2% 0% 2% 1%;
   background: #f7b617;
-  font: 1.5vw Helvetica; }
+  font: Helvetica; }
 
 ul {
   color: white;
-  font: 1vw Arial; }
+  font: Arial; }
   ul li {
     background: #2b2b2b;
     margin: 1%;
@@ -79,13 +88,13 @@ ul {
     background: #f7b617; }
 
 #descripcion {
-  font: 1vw Arial;
+  font: Arial;
   margin-top: 2%; }
   #descripcion h1 {
-    font: 1.5vw Helvetica;
+    font: Helvetica;
     margin-top: 2%; }
   #descripcion h4 {
-    font: 1.5vw Helvetica;
+    font: Helvetica;
     margin-top: 2%; }
   #descripcion p {
     margin-top: 2%; }
@@ -93,16 +102,16 @@ ul {
     margin-top: 1%; }
 
 #deberes {
-  font: 1vw Arial;
+  font: Arial;
   margin-top: 2%;
   background-color: #2b2b2b;
   color: white;
   text-align: center; }
   #deberes h2 {
-    font: 1.5vw Helvetica;
+    font: Helvetica;
     margin-top: 2%; }
   #deberes h4 {
-    font: 1.5vw Helvetica;
+    font: Helvetica;
     margin-top: 2%; }
   #deberes p {
     margin-top: 2%; }
@@ -110,7 +119,7 @@ ul {
     margin-top: 1%; }
 
 footer {
-  font: 1vw Arial;
+  font: Arial;
   margin-top: 2%;
   padding: 4%;
   background-color: #2b2b2b;
