--- a/src/scss/_varibles.scss
+++ b/src/scss/_varibles.scss
@@ -1,4 +1,4 @@
-$title-font: 1.5vw Helvetica;
-$paragraph-size:1vw Arial;
+$title-font:Helvetica;
+$paragraph-size:Arial;
 $labYellow: rgb(247, 182, 23);
 $labGray: rgb(43, 43, 43);
