Nombres con Api

--- a/src/scss/_varibles.scss
+++ b/src/scss/_varibles.scss
@@ -1,4 +1,4 @@
-$title-font:Helvetica;
-$paragraph-size:Arial;
+$title-font: 2vw Helvetica;
+$paragraph-size:1.7vw Arial;
 $labYellow: rgb(247, 182, 23);
 $labGray: rgb(43, 43, 43);
