--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,11 +75,11 @@
   color: white;
   padding: 2% 0% 2% 1%;
   background: #f7b617;
-  font: Helvetica; }
+  font: 2vw Helvetica; }
 
 ul {
   color: white;
-  font: Arial; }
+  font: 1.7vw Arial; }
   ul li {
     background: #2b2b2b;
     margin: 1%;
@@ -88,13 +88,13 @@ ul {
     background: #f7b617; }
 
 #descripcion {
-  font: Arial;
+  font: 1.7vw Arial;
   margin-top: 2%; }
   #descripcion h1 {
-    font: Helvetica;
+    font: 2vw Helvetica;
     margin-top: 2%; }
   #descripcion h4 {
-    font: Helvetica;
+    font: 2vw Helvetica;
     margin-top: 2%; }
   #descripcion p {
     margin-top: 2%; }
@@ -102,16 +102,16 @@ ul {
     margin-top: 1%; }
 
 #deberes {
-  font: Arial;
+  font: 1.7vw Arial;
   margin-top: 2%;
   background-color: #2b2b2b;
   color: white;
   text-align: center; }
   #deberes h2 {
-    font: Helvetica;
+    font: 2vw Helvetica;
     margin-top: 2%; }
   #deberes h4 {
-    font: Helvetica;
+    font: 2vw Helvetica;
     margin-top: 2%; }
   #deberes p {
     margin-top: 2%; }
@@ -119,7 +119,7 @@ ul {
     margin-top: 1%; }
 
 footer {
-  font: Arial;
+  font: 1.7vw Arial;
   margin-top: 2%;
   padding: 4%;
   background-color: #2b2b2b;
